--- a/estructura de archivos/public/css/footer.css
+++ b/estructura de archivos/public/css/footer.css
@@ -7,6 +7,7 @@
     width: 100%;
     border-top: 5px solid var(--C_Discord);
     margin-top: 2em;
+    /* position: absolute; */
 }
 
 .footer--logo {
