error 404 page done - working on media queries

--- a/estructura de archivos/src/views/error.ejs
+++ b/estructura de archivos/src/views/error.ejs
@@ -1,3 +1,14 @@
-<h1><%= message %></h1>
-<h2><%= error.status %></h2>
-<pre><%= error.stack %></pre>
+<!DOCTYPE html>
+<html lang="en">
+    <%- include('./partials/head',{ title:'home', }) %>
+<body>
+    <main>
+        <div class="error--container">
+            <img src="/images/error-404.jpg" alt="Error 404">
+        </div>
+        <div class="error--index">
+            <a href="/">VOLVER AL INICIO</a>
+        </div>
+    </main>
+</body>
+</html>l
