contact page mobile progress

--- a/estructura de archivos/src/views/contact.ejs
+++ b/estructura de archivos/src/views/contact.ejs
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
-<%- include('./partials/head',{ title:'home', }) %>
+<%- include('./partials/head',{title:'home'}) %>
 
     <body class="contact_body">
-        <%- include('../partials/header',{ title:'home', }) %>
         <div class="motherbox"  >
             <div id="tituloContact" class="body__form--title"><h2>Contacto</h2></div> 
             <div class="mensajeContact" >
